# simple_wm

./: Cargo.toml  README.md
simple_wm/: Cargo.toml  start_xephyr.sh  xinitrc
simple_wm/src/: client.rs  config.rs  data.rs  event_codes.rs  event_handler.rs  main.rs  window_manager.rs  window_system.rs
simple_wm/src/clients/: client.rs
simple_wm/src/handlers/: mod.rs
simple_wm/src/key_handler/: action.rs  key_binding.rs  mod.rs  modifier.rs
simple_wm/src/layout/: mod.rs  stack_layout.rs
simple_wm/src/models/: mod.rs
simple_wm/src/tag/: mod.rs  tag.rs
