[package]
name = "simple_wm"
version = "0.1.0"
authors = ["Martin Linhard <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2", features = ["xlib", "xinput", "xrandr", "xcursor", "xf86vmode", "dpms", "glx", "xft", "xinerama", "xmu", "xrender", "xrecord", "xss", "xt"]}
